# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: build.yml
