[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lclbm", email = "614867321@qq.com" }
]
requires-python = ">=3.11.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "nonemoji>=0.1.4",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
